--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-    <html>
-            <head>
-                <title> Portfolio - CV </title>
-            </head>
-            <body>
-                <h1> First Initialization</h1>
-                <p>
-                    Git and Github Commit and Push Activity
-                </p>
-            </body>
+<html>
+	<head>
+		<title>
+		Profile page
+		</title>
+		</head>
+	<body>
+	<h1>ITC7 - The Internet and web Application</h1>
+	<p>Git and Github Activity</p>
+	<p>Pull Activity</p>
+	</body>
 </html>
