--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<body>
 	<h1>ITC7 - The Internet and web Application</h1>
 	<p>Git and Github Activity</p>
-	<p>Pull Activity</p>
+	<p>Pull Activit! </p>
 	</body>
 </html>
