--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Blog Resume</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,9 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-
+  <style>
+   
+    </style>
 </head>
 
 <body id="page-top">
@@ -51,7 +53,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li> 
+        </li>  
+        <li class="nav-item">
+          <script type="text/javascript" src="https://freehitcounters.org/count/2vfj"></script><br>
+          <a href='https://uhrenszene.de/'>Uhrenszene.de</a> <script type='text/javascript' src='https://whomania.com/ctr?id=aeb9ac1ff720ac24bfea70bee57ebbb593659321'></script>
+    
+          <a href="http://www.counter-zaehler.de" style="color: white;"><u>Web Counter</u></a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -68,11 +76,14 @@
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
-          <a href="https://www.instagram.com/mher_vinz/">
-            <i class="fab fa-instagram"></i>
+          <!-- <a href="https://www.instagram.com/mher_vinz/">
+            <i class="fab fa-messege"></i> -->
           </a>
           <a href="https://github.com/mervins">
             <i class="fab fa-github"></i>
+          </a> 
+          <a href="https://twitter.com/mersongwapo">
+            <i class="fab fa-twitter"></i>
           </a> 
           <a href="https://web.facebook.com/mohamad.vinarao">
             <i class="fab fa-facebook-f"></i>
@@ -85,7 +96,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5"><u>Work Experience</u></h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -115,7 +126,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5"><u>Education</u></h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -147,7 +158,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
+        <h2 class="mb-5"><u>Skills</u></h2>
    
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="fa-ul mb-0">
@@ -171,7 +182,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
+        <h2 class="mb-5"><u>Interests</u></h2>
         <p>Apart from being a mobile developer, I enjoy most of my time being outdoors. In the summer, we play basketball, travel with family and freinds.</p>
         <p class="mb-0">When forced indoors, I follow a number of series of anime and fantasy movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements.</p>
       </div>
