--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <span class="text-primary">Vinarao</span>
         </h1>
         <div class="subheading mb-5">Malaybalay · Bukidnon · 8700· (+63)926-964-9985 ·
-          <a href="mailto:osmervinarao@gmail.com">osmervinarao@gemail.com</a>
+          <a href="mailto:osmervinarao@gmail.com">osmervinarao@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
