--- a/index.html
+++ b/index.html
@@ -12,17 +12,32 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+ 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
+    <!-- Required Stylesheets -->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"
+    />
+  <!---VUE CDN-->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> 
+  <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
+
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
   <style>
-   
-    </style>
+
+  </style>
 </head>
 
 <body id="page-top">
@@ -34,7 +49,8 @@
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/osmer.jpg" alt="">
       </span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,11 +69,16 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>  
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#love">LOVE</a>
+        </li>
         <li class="nav-item">
           <script type="text/javascript" src="https://freehitcounters.org/count/2vfj"></script><br>
-          <a href='https://uhrenszene.de/'>Uhrenszene.de</a> <script type='text/javascript' src='https://whomania.com/ctr?id=aeb9ac1ff720ac24bfea70bee57ebbb593659321'></script>
-    
+          <a href='https://uhrenszene.de/'>Uhrenszene.de</a>
+          <script type='text/javascript'
+            src='https://whomania.com/ctr?id=aeb9ac1ff720ac24bfea70bee57ebbb593659321'></script>
+
           <a href="http://www.counter-zaehler.de" style="color: white;"><u>Web Counter</u></a>
         </li>
       </ul>
@@ -74,17 +95,19 @@
         <div class="subheading mb-5">Malaybalay · Bukidnon · 8700· (+63)926-964-9985 ·
           <a href="mailto:osmervinarao@gmail.com">osmervinarao@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+          value proposition.</p>
         <div class="social-icons">
           <!-- <a href="https://www.instagram.com/mher_vinz/">
             <i class="fab fa-messege"></i> -->
           </a>
           <a href="https://github.com/mervins">
             <i class="fab fa-github"></i>
-          </a> 
+          </a>
           <a href="https://twitter.com/mersongwapo">
             <i class="fab fa-twitter"></i>
-          </a> 
+          </a>
           <a href="https://web.facebook.com/mohamad.vinarao">
             <i class="fab fa-facebook-f"></i>
           </a>
@@ -101,18 +124,18 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Mobile Developer</h3>
-            <div class="subheading mb-3">Split Second Software Services</div> 
+            <div class="subheading mb-3">Split Second Software Services</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2018 - Present</span>
           </div>
-        </div> 
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Web Developer Intern</h3>
             <div class="subheading mb-3">BAI web and mobile</div>
-             </div>
+          </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2017 - March 2018</span>
           </div>
@@ -159,7 +182,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5"><u>Skills</u></h2>
-   
+
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="fa-ul mb-0">
           <li>
@@ -183,12 +206,52 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5"><u>Interests</u></h2>
-        <p>Apart from being a mobile developer, I enjoy most of my time being outdoors. In the summer, we play basketball, travel with family and freinds.</p>
-        <p class="mb-0">When forced indoors, I follow a number of series of anime and fantasy movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements.</p>
+        <p>Apart from being a mobile developer, I enjoy most of my time being outdoors. In the summer, we play
+          basketball, travel with family and freinds.</p>
+        <p class="mb-0">When forced indoors, I follow a number of series of anime and fantasy movies and television
+          shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology
+          advancements.</p>
       </div>
     </section>
+    <hr class="m-0">
 
-    <hr class="m-0">  
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="love">
+      <div id="app">
+        <b-card-group deck class="mb-3">
+          <b-card bg-variant="primary" text-variant="white" header="Primary" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+          <b-card bg-variant="secondary" text-variant="white" header="Secondary" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+          <b-card bg-variant="success" text-variant="white" header="Success" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+        </b-card-group>
+        <b-card-group deck class="mb-3">
+          <b-card bg-variant="info" text-variant="white" header="Info" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+          <b-card bg-variant="warning" text-variant="white" header="Warning" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+          <b-card bg-variant="danger" text-variant="white" header="Danger" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+        </b-card-group>
+        <b-card-group deck class="mb-3">
+          <b-card bg-variant="light" header="Light" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+          <b-card bg-variant="dark" header="Dark" text-variant="white" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+          <b-card header="Default" class="text-center">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </b-card>
+        </b-card-group>
+      </div>
+    </section>
   </div>
 
   <!-- Bootstrap core JavaScript -->
@@ -200,6 +263,15 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
+  <script>
+    var app = new Vue({
+
+      el: '#app',
+      data: {
+        message: 'Hello Vue!'
+      }
+    })
+  </script>
 
 </body>
 
