--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="summary">
             <h4 class="text-primary">Professional Summary</h4>
             <p><b>  Hi! I'm Osmer, with 3 years of experience working as a computer programmer. Capable of working with a variety of technology to
-                gain more experience and knowledge and collaborate with my colleagues to be able to add the strength of the company and myself too.</b>
+                gain more experience, knowledge and collaborate with my colleagues to be able to add the strength of the company and myself too.</b>
               
             </p>
         </div>
@@ -127,16 +127,24 @@
         </div>
         <div class="experience">
             <h4 class="text-primary">Education</h4> 
-            <p><strong class="text-primary">Bukidnon State University</strong> - <span><i>Information Technology</i> 2013-2018</span></p>
+            <p><strong class="text-primary">Bukidnon State University</strong> - <i>Malaybalay City</i> <br></p>
             <ul>
+                <li><strong><i>Bachelor of Science in Information Technology</i> 2013-2018</strong></li>
                 <li><strong>Computer Society, 2016-2018</strong></li>
             </ul> 
         </div>
         <div class="experience">
-            <h4 class="text-primary">REFERAL</h4>  
+            <h4 class="text-primary">REFERRAL</h4>  
             <ul>
                 <li><strong>Isabella Gillian Alvarez</strong></li>
                 <li><strong>Vincent Cupiid Tabiongan</strong></li>
+            </ul> 
+        </div>
+        <div class="experience">
+            <h4 class="text-primary">Contacts</h4>  
+            <ul>
+                <li><strong>osmervinarao@gmail.com</strong></li>
+                <li><strong>(+63)926-964-9985</strong></li>
             </ul> 
         </div>
     </div>
