fixing pdf export

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
             a:hover, a:focus, a:active {
             color: #824027;
             }
+            @media print {
+            body {
+                background-color: #FFF;
+            }
+        }
     </style>
 </head> 
 <body> 
@@ -98,7 +103,7 @@
             <h2 class="h-name text-center">Osmer U. Vinarao</h2> 
         </div>
         <div class="summary">
-            <h4 class="text-primary">Professional Summary</h4>
+            <h4 class="text-primary"><strong>Professional Summary</strong></h4>
             <p><b>  Hi! I'm Osmer, with 3 years of experience working as a computer programmer. I am capable of working with a variety of technology to
                 gain more experience, knowledge and collaborate with my colleagues to be able to add the strength of the company and myself too.</b>
               
