--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
         </div>
         <div class="summary">
             <h4 class="text-primary"><strong>Professional Summary</strong></h4>
-            <p><b>  Hi! I'm Osmer, with 3 years of experience working as a computer programmer. I am capable of working with a variety of technology to
-                gain more experience, knowledge and collaborate with my colleagues to be able to add the strength of the company and myself too.</b>
+            <p><b>I am capable and flexible of working with variety of technologiesy to gain more experience, 
+                knowledge and collaborate with my colleagues to be able to add the strength of the company.</b>
               
             </p>
         </div>
         <div class="experience">
             <h4 class="text-primary">Experience</h4>
             <p><b>
-                I'm current working as a SOFTWARE DEVELOPER at Split Second Software Services Corporation.
+                I'm currently working as a SOFTWARE DEVELOPER at Split Second Software Services Corporation.
             </b></p>
             <ul>
                 <li><strong>Frontend Developer</strong> using Laravel Jetstream (VueJS)<i class="text-primary"> (May, 2020 - Present)</i></li>
@@ -124,10 +124,12 @@
         <div class="experience">
             <h4 class="text-primary">Company Project</h4> 
             <ul>
-                <li><strong>Dr.Implicit</strong> (Frontend) mobile app using <strong>Flutter</strong> (<a href="https://play.google.com/store/apps/details?id=com.splitsecondresearch.implicitdr1"> Public</a>)</li>
-                <li><strong>Impulse IDE</strong> (Frontend) using  <strong>Laravel VueJS</strong> <i>(Confidential)</i></li>
+                <li><strong>Dr.Implicit</strong> (Frontend) mobile app using <strong>Flutter</strong>
+                (<a href="https://play.google.com/store/apps/details?id=com.splitsecondresearch.implicitdr1"> Public</a>) 
+            </li>
+                <li><strong>Impulse IDE</strong> (Frontend) using  <strong>VueJS</strong> <i>(Confidential)</i></li>
                 <li><strong>Cost Tool IDE</strong> (Fullstack) using <strong>Laravel VueJS</strong> <i>(Confidential)</i></li>
-                <li><strong>Express IDE</strong> (Frontend) using <strong>Laravel Jetstream (VueJS)</strong> <i>(Confidential)</i></li>
+                <li><strong>Express IDE</strong> (Frontend) using <strong>Laravel Jetstream (Inertia)</strong> <i>(Confidential)</i></li>
             </ul>
         </div>
         <div class="experience">
