update cv again

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </b></p>
             <p><strong>2018 - Present</strong></p>
             <ul>
-                <li><strong>Knowledgeable working with Laravel Jetstream, VueJS, Flutter for Mobile Developmen</strong> 
+                <li><strong>Knowledgeable working with Laravel Jetstream, VueJS, Flutter for Mobile Development</strong> 
                 <li><strong>Designed and developed company custom  IDE’s</strong> </li>
                 <li><strong>Some of the projects that we developed:</strong>
                     <ul>
