--- a/index.html
+++ b/index.html
@@ -170,17 +170,33 @@
                         <li><strong>Dr.Implicit (Frontend) mobile app using Flutter</strong></li>
                         <li><strong>Impulse IDE (Frontend) using VueJS (Confidential)</strong></li>
                         <li><strong>Cost Tool IDE (Fullstack) using Laravel VueJS (Confidential)</strong></li>
-                        <li><strong>Express IDE (Frontend) using Laravel Jetstream (Inertia) (Confidential)</strong></li>
+                        <li><strong>Express IDE (Frontend) using Laravel Jetstream (Inertia) (Confidential & Team Project)</strong></li>
+                        <li><strong>Impress IDE (Fullstack) using Laravel Jetstream (Inertia) (Confidential & Team Project)</strong></li>
+                    </ul>
+                </li> 
+                <li><strong>For my personal projects include the following:</strong>
+                    <ul>
+                        <li><strong>Pastil ni Babo (Blog) using ReactJS and pure CSS</strong></li>
+                        <li><strong>Tie-Mer using ReactJS, Tailwind and DexieJS</strong></li>
+                        <li><strong>Iddle's Invetory system using VueJS, Vuetify and for the second version I used ReactJS and pure CSS</strong></li>
+                        <li><strong>Farm Mapping using Laravel, Vue, Tailwind and LeafletJS</strong></li> 
                     </ul>
                 </li>
                 
             </ul>
         </div> 
         <div class="experience">
-            <h4 class="text-primary"><strong class="text-primary">Skills</strong></h4> 
+            <h4 class="text-primary"><strong class="text-primary">Skills Summary</strong></h4> 
             <ul>
-                <li><strong>HTML, CSS, JavaScript, Laravel, Flutter, VueJS, Nodejs, Express, Sequalize and ElectronJS.</strong></li>
-                <li><strong>CSS library (Bootstrap & Tailwind)</strong></li> 
+                <li><strong>Experience in programming languages such as JavaScript, Python, java, Dart and PHP</strong></li>
+                <li><strong>Experience with frameworks such as Laravel, Flutter, ReactJS, VueJS, ElectronJS and Express.JS.</strong></li> 
+                <li><strong>Experience with databases and SQL</strong></li>
+                <li><strong>Experience with version control systems such as Git</strong></li>
+                <li><strong>Strong problem-solving skills</strong></li>
+                <li><strong>Ability to work effectively in a team</strong></li>
+                <li><strong>Ability to learn new technologies quickly</strong></li>
+                <li><strong>HTML, CSS</strong></li>
+                <li><strong>CSS library (Bootstrap & Tailwind)</strong></li>
             </ul> 
         </div>
         <div class="experience">
