--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="experience">
             <h4 class="text-primary"><strong class="text-primary">Interest</strong></h4> 
             <ul>
-                <li><strong>Bike Enduro, Basketball, Traveling, Mobile and Desktop games, Hiking</strong></li> 
+                <li><strong>Bike Enduro, Basketball, Traveling, Mobile and Desktop games.</strong></li> 
             </ul> 
         </div>
         <!-- <div class="experience">
