--- a/index.html
+++ b/index.html
@@ -96,13 +96,14 @@
             font-family: 'Source Code Pro', monospace;
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: start;
             align-items: center;
             font-weight: 600; 
             margin-top: 10px;
             padding-left: 42px;
             padding-right: 42px;
             font-size: 12px;
+            gap: 30px;
             
         }
         .name{
@@ -141,7 +142,9 @@
             <div>  
                 <i class="glyphicon glyphicon-earphone"></i>
                 (+63)926-964-9985
-            </div>
+            </div> 
+        </div>
+        <div class="contact"> 
             <div>  
                 <i class="glyphicon glyphicon-home"></i>
                 mervins.github.io/portfolio
