--- a/index.html
+++ b/index.html
@@ -166,23 +166,23 @@
             </b></p>
             <p><strong>2018 - Present</strong></p>
             <ul>
-                <li><strong>Knowledgeable working with Laravel Jetstream, VueJS and Flutter for Mobile Development</strong> 
-                <li><strong>Designed and developed company custom  IDE’s</strong> </li>
-                <li><strong>Some of the projects that we developed:</strong>
+                <li><strong>Skilled in using Laravel Jetstream, VueJS, and Flutter for mobile development</strong> 
+                <li><strong>Designed and developed custom IDE's for the company</strong> </li>
+                <li><strong>Projects developed include:</strong>
                     <ul>
-                        <li><strong>Dr.Implicit (Frontend) mobile app using Flutter</strong></li>
-                        <li><strong>Impulse IDE (Frontend) using VueJS (Confidential)</strong></li>
-                        <li><strong>Cost Tool IDE (Fullstack) using Laravel VueJS (Confidential)</strong></li>
-                        <li><strong>Express IDE (Frontend) using Laravel Jetstream (Inertia) (Confidential & Team Project)</strong></li>
-                        <li><strong>Impress IDE (Fullstack) using Laravel Jetstream (Inertia) (Confidential & Team Project)</strong></li>
+                        <li><strong>Dr. Implicit (frontend) mobile app using Flutter</strong></li>
+                        <li><strong>Confidential Impulse IDE (frontend) using VueJS</strong></li>
+                        <li><strong>Confidential Cost Tool IDE (fullstack) using Laravel VueJS</strong></li>
+                        <li><strong>Confidential Express IDE (frontend) using Laravel Jetstream (Inertia) (team project)</strong></li>
+                        <li><strong>Confidential Impress IDE (fullstack) using Laravel Jetstream (Inertia) (team project)</strong></li>
                     </ul>
                 </li> 
-                <li><strong>For my personal projects include the following:</strong>
+                <li><strong>Personal projects include:</strong>
                     <ul>
-                        <li><strong>Pastil ni Babo (Blog) using ReactJS and pure CSS</strong></li>
+                        <li><strong>Pastil ni Babo (blog) using ReactJS and pure CSS</strong></li>
                         <li><strong>Tie-Mer using ReactJS, Tailwind and DexieJS</strong></li>
-                        <li><strong>Iddle's Invetory system using VueJS, Vuetify and for the second version I used ReactJS and pure CSS</strong></li>
-                        <li><strong>Farm Mapping using Laravel, Vue, Tailwind and LeafletJS</strong></li> 
+                        <li><strong>Iddle's Inventory system using VueJS, Vuetify, and ReactJS with pure CSS (second version)</strong></li>
+                        <li><strong>Farm Mapping using Laravel, Vue, Tailwind, and LeafletJS</strong></li> 
                     </ul>
                 </li>
                 
@@ -199,7 +199,7 @@
                 <li><strong>Ability to work effectively in a team</strong></li>
                 <li><strong>Ability to learn new technologies quickly</strong></li>
                 <li><strong>HTML, CSS</strong></li>
-                <li><strong>CSS library (Bootstrap & Tailwind)</strong></li>
+                <li><strong>CSS libraries (Bootstrap, Tailwind, and Vuetify)</strong></li>
             </ul> 
         </div>
         <div class="experience">
