--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet"> -->
     <style> 
         body {
             margin: 0px;
             background-color: #EEE;
         }
         h1,h2,h3,h4,h5,h6,p,li{ 
-        font-family: 'Source Code Pro', monospace;
+            font-family: 'Karla', sans-serif;
         color: #343a40;
         }
         .img-fluid{
@@ -72,6 +73,9 @@
             padding-top: 0px;
             padding-right: 25px;
         } 
+        .summary>h4,.experience>h4,.summary>h4{ 
+            border-bottom: 2px solid black;
+        }
         .bg-primary {
             background-color: #BD5D38 !important;
             }
@@ -93,13 +97,12 @@
         } 
         }
         .contact{
-            font-family: 'Source Code Pro', monospace;
+            /* font-family: 'Karla', sans-serif; */
             display: flex;
             flex-direction: row;
             justify-content: start;
             align-items: center;
-            font-weight: 600; 
-            margin-top: 10px;
+            font-weight: 600;  
             padding-left: 42px;
             padding-right: 42px;
             font-size: 12px;
@@ -107,7 +110,11 @@
             
         }
         .name{
-            padding-top: 20px;
+            padding-top: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
         .name>.name1{
             font-size: 45px;
@@ -116,8 +123,9 @@
         }
         .name>.position{
             padding-top: 5px;
-            font-size: 16px;
-            font-family: 'Source Code Pro', monospace;
+            font-size: 20px; 
+            color: #BD5D38;
+            /* font-family: 'Source Code Pro', monospace; */
             font-weight: 600;
         }
     </style>
@@ -132,39 +140,40 @@
         </div> -->
         <div class="name">
             <div class="name1 text-primary">Osmer Vinarao</div>
-            <div class="position">Full Stack, Software Developer</div>
-        </div>
-        <div class="contact">
-            <div> 
-                <i class="glyphicon glyphicon-envelope"></i>
-                osmervinarao@gmail.com 
+            <div class="contact"> 
+                <div>  
+                    <i class="glyphicon glyphicon-home"></i>
+                    mervins.github.io/portfolio
+                </div>
+                <div>  
+                    <i class="glyphicon glyphicon-tags"></i>
+                    github.dev/mervins
+                </div>
             </div>
-            <div>  
-                <i class="glyphicon glyphicon-earphone"></i>
-                (+63)926-964-9985
+            <div class="contact">
+                <div> 
+                    <i class="glyphicon glyphicon-envelope"></i>
+                    osmervinarao@gmail.com 
+                </div>
+                <div>  
+                    <i class="glyphicon glyphicon-earphone"></i>
+                    (+63)926-964-9985
+                </div> 
             </div> 
+            <div class="position">Software Developer</div>
         </div>
-        <div class="contact"> 
-            <div>  
-                <i class="glyphicon glyphicon-home"></i>
-                mervins.github.io/portfolio
-            </div>
-            <div>  
-                <i class="glyphicon glyphicon-tags"></i>
-                github.dev/mervins
-            </div>
-        </div>
+       
         <div class="summary">
             <h4 class="text-primary"><strong class="text-primary">Summary</strong></h4>
             <p><b>I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. </b>
             </p>
         </div> 
         <div class="experience">
-            <h4 class="text-primary"><strong class="text-primary">Experience</strong></h4>
+            <h4 class="text-primary"><strong class="text-primary">Professional Experience</strong></h4>
             <p><b>
-                Split Second Software Services - Software Developer 
+                Split Second Software Services | Software Developer - 2018 - Present
             </b></p>
-            <p><strong>2018 - Present</strong></p>
+            <!-- <p><strong></strong></p> -->
             <ul>
                 <li><strong>Skilled in using Laravel Jetstream, VueJS, and Flutter for mobile development</strong> 
                 <li><strong>Designed and developed custom IDE's for the company</strong> </li>
@@ -189,7 +198,7 @@
             </ul>
         </div> 
         <div class="experience">
-            <h4 class="text-primary"><strong class="text-primary">Skills Summary</strong></h4> 
+            <h4 class="text-primary"><strong class="text-primary">Key Skills</strong></h4> 
             <ul>
                 <li><strong>Experience in programming languages such as JavaScript, Python, java, Dart and PHP</strong></li>
                 <li><strong>Experience with frameworks such as Laravel, Flutter, ReactJS, VueJS, ElectronJS and Express.JS.</strong></li> 
@@ -205,18 +214,18 @@
         <div class="experience">
             <h4 class="text-primary"><strong class="text-primary">Education</strong></h4> 
             <p><strong class="text-primary">Bukidnon State University </strong> <strong>- Malaybalay City, Bukidnon, Philippines</strong></p>
-            <p><strong> 2013-2018</strong></p>
+            <!-- <p><strong> 2013-2018</strong></p> -->
             <ul>
                 <li><strong>Bachelor of Science in Information Technology</strong></li>
-                <li><strong>Computer Society, 2016-2018</strong></li>
+                <li><strong>Computer Society - 2016-2018</strong></li>
             </ul> 
         </div> 
-        <div class="experience">
+        <!-- <div class="experience">
             <h4 class="text-primary"><strong class="text-primary">Interest</strong></h4> 
             <ul>
-                <li><strong>Bike Enduro, Basketball, Traveling, Mobile and Desktop games.</strong></li> 
+                <li><strong>Bike Enduro, Basketball, Traveling, Mobile and Desktop games.</strong></li>  
             </ul> 
-        </div>
+        </div> -->
         <!-- <div class="experience">
             <h4 class="text-primary">Contacts</h4>  
             <ul>
