fix education background

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
             /* font-family: 'Source Code Pro', monospace; */
             font-weight: 600;
         }
+        span{ 
+            font-weight: 600; 
+            font-size: 18px; 
+            color: black;
+        }
     </style>
 </head> 
 <body> 
@@ -171,9 +176,8 @@
         <div class="experience">
             <h4 class="text-primary"><strong class="text-primary">Professional Experience</strong></h4>
             <p><b>
-                Split Second Software Services | Software Developer - 2018 - Present
-            </b></p>
-            <!-- <p><strong></strong></p> -->
+                <span>Split Second Software Services</span> | Software Developer | July 2018 - Present
+            </b></p> 
             <ul>
                 <li><strong>Skilled in using Laravel Jetstream, VueJS, and Flutter for mobile development</strong> 
                 <li><strong>Designed and developed custom IDE's for the company</strong> </li>
@@ -193,10 +197,18 @@
                         <li><strong>Iddle's Inventory system using VueJS, Vuetify, and ReactJS with pure CSS (second version)</strong></li>
                         <li><strong>Farm Mapping using Laravel, Vue, Tailwind, and LeafletJS</strong></li> 
                     </ul>
-                </li>
-                
+                </li> 
             </ul>
         </div> 
+        <div class="experience">
+            <h4 class="text-primary"><strong class="text-primary">Internship</strong></h4>
+            <p><b>
+                <span>Bai Web and Mobile Lab</span> | Web Developer | December 2017 - February 2018
+            </b></p> 
+            <ul>
+                <li><strong>Design and develop using Frappe framework (ERPNext)</strong>   
+            </ul>
+        </div>
         <div class="experience">
             <h4 class="text-primary"><strong class="text-primary">Key Skills</strong></h4> 
             <ul>
@@ -213,7 +225,7 @@
         </div>
         <div class="experience">
             <h4 class="text-primary"><strong class="text-primary">Education</strong></h4> 
-            <p><strong class="text-primary">Bukidnon State University </strong> <strong>- Malaybalay City, Bukidnon, Philippines</strong></p>
+            <p><strong class="text-primary">Bukidnon State University </strong> <strong>| Malaybalay City, Bukidnon, Philippines | 2013 - 2018</strong></p>
             <!-- <p><strong> 2013-2018</strong></p> -->
             <ul>
                 <li><strong>Bachelor of Science in Information Technology</strong></li>
