--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
             display: flex;
             flex-direction: row;
             justify-content: start;
-            align-items: center;
-            font-weight: 600;  
+            align-items: center; 
             padding-left: 42px;
             padding-right: 42px;
             font-size: 12px;
@@ -148,11 +147,11 @@
             <div class="contact"> 
                 <div>  
                     <i class="glyphicon glyphicon-home"></i>
-                    mervins.github.io/portfolio
+                    Malaybalay City, Philippines 
                 </div>
                 <div>  
-                    <i class="glyphicon glyphicon-tags"></i>
-                    github.dev/mervins
+                    <i class="glyphicon glyphicon-globe"></i>
+                    mervins.github.io/portfolio
                 </div>
             </div>
             <div class="contact">
@@ -210,7 +209,7 @@
             </ul>
         </div>
         <div class="experience">
-            <h4 class="text-primary"><strong class="text-primary">Key Skills</strong></h4> 
+            <h4 class="text-primary"><strong class="text-primary">Skills</strong></h4> 
             <ul>
                 <li><strong>Experience in programming languages such as JavaScript, Python, java, Dart and PHP</strong></li>
                 <li><strong>Experience with frameworks such as Laravel, Flutter, ReactJS, VueJS, ElectronJS and Express.JS.</strong></li> 
@@ -219,7 +218,7 @@
                 <li><strong>Strong problem-solving skills</strong></li>
                 <li><strong>Ability to work effectively in a team</strong></li>
                 <li><strong>Ability to learn new technologies quickly</strong></li>
-                <li><strong>HTML, CSS</strong></li>
+                <li><strong>HTML & CSS</strong></li>
                 <li><strong>CSS libraries (Bootstrap, Tailwind, and Vuetify)</strong></li>
             </ul> 
         </div>
@@ -229,7 +228,7 @@
             <!-- <p><strong> 2013-2018</strong></p> -->
             <ul>
                 <li><strong>Bachelor of Science in Information Technology</strong></li>
-                <li><strong>Computer Society - 2016-2018</strong></li>
+                <li><strong>Computer Society | 2016-2018</strong></li>
             </ul> 
         </div> 
         <!-- <div class="experience">
