--- a/index.html
+++ b/index.html
@@ -181,12 +181,13 @@
                 <li><strong>Skilled in using Laravel Jetstream, VueJS, and Flutter for mobile development</strong> 
                 <li><strong>Designed and developed custom IDE's for the company</strong> </li>
                 <li><strong>Projects developed include:</strong>
-                    <ul>
-                        <li><strong>Dr. Implicit (frontend) mobile app using Flutter</strong></li>
+                    <ul> 
+                        <li><strong>Confidential Comms Tools (frontend) mobile app using Ionic VueJS</strong></li>
+                        <li><strong>Confidential Express IDE (frontend) using Laravel Jetstream (Inertia) (team project)</strong></li>
+                        <li><strong>Confidential Impress IDE (fullstack) using Laravel Jetstream (Inertia) (team project)</strong></li> 
                         <li><strong>Confidential Impulse IDE (frontend) using VueJS</strong></li>
                         <li><strong>Confidential Cost Tool IDE (fullstack) using Laravel VueJS</strong></li>
-                        <li><strong>Confidential Express IDE (frontend) using Laravel Jetstream (Inertia) (team project)</strong></li>
-                        <li><strong>Confidential Impress IDE (fullstack) using Laravel Jetstream (Inertia) (team project)</strong></li>
+                        <li><strong>Dr. Implicit (frontend) mobile app using Flutter</strong></li>
                     </ul>
                 </li> 
                 <li><strong>Personal projects include:</strong>
